--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- STYLE SHEETS -->
+        <link rel="stylesheet" href="style.css" />
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="style.css">
@@ -38,15 +39,14 @@
                     </div>
                 </nav>
             <!-- HERO SECTION START -->
+           
             <div class="px-4 py-5 mb-5 text-center bg-light">
                 <h1 class="display-5 fw-bold">    My name is Zola Mendbayar, I'm currently a sophomore at Glenbrook South High School.</h1>
+                <img src="img/zola.jpg" class="rounded-circle" alt="Cinque Terre" width="278" height="350"> 
                 <p class="lead">
-             I was born in Mongolia and moved to the U.S. 6 years ago! Fluent in both English and Mongolian, I embrace the richness of my multicultural background and I am deeply fascinated by different cultures. My love for exploring new things is endless and my curiosity leads me to look at the world in different perspectives and gain new experience.  I'm proud to say that I lead as the captain of our field hockey team and am on the JV badminton. Family and friends are my core values, the love and connection I have with them shape who I am today. I'm truly passionate about maintaining a healthy lifestyle and love working out and running to stay fit while balancing my life between school and at home. In my opinion, putting in the effort always pays off, and I see no reason to stop working hard. It's the key to unlocking the best outcomes, and I will never stop encouraging others to never give up.
+             I was born in Mongolia. Fluent in both English and Mongolian, I embrace the richness of my multicultural background and I am deeply fascinated by different cultures. My love for exploring new things is endless and my curiosity leads me to look at the world in different perspectives and gain new experience.  I'm proud to say that I lead as the captain of our field hockey team and am on the JV badminton. Family and friends are my core values, the love and connection I have with them shape who I am today. I'm truly passionate about maintaining a healthy lifestyle and love working out and running to stay fit while balancing my life between school and at home. In my opinion, putting in the effort always pays off, and I see no reason to stop working hard. It's the key to unlocking the best outcomes, and I will never stop encouraging others to never give up.
             </p>
           </div>
-      </div>
-      <div class="container mt-3">      
-        <img src="cinqueterre.jpg" class="rounded-circle" alt="Cinque Terre" width="304" height="236"> 
       </div>
       
         </body>
