--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- STYLE SHEETS -->
-    <link rel="stylesheet" href="style.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="style.css" />
     <!-- JAVASCRIPT -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </head>
@@ -37,39 +37,80 @@
         </div>
     </nav>
      <!-- HERO SECTION START -->
-<div class="hero-section py-5">
-    <main class="container py-5">
-        <div class="row">
-            <div class="col-sm-4">
-                <img src="img/zola.jpg" class="rounded-circle" alt="Zola Mendbayar" width="278" height="350">
+    <div class="hero-section py-5">
+        <main class="container py-5">
+            <div class="row">
+                <div class="col-sm-4">
+                    <img src="img/zola.jpg" class="rounded-circle" alt="Zola Mendbayar" width="278" height="350">
+                </div>
+                <div class="col-sm-8">
+                    <h1 class="display-5 fw-bold">My name is Zola Mendbayar, I'm currently a sophomore at Glenbrook South High School.</h1>
+                </div>
             </div>
-            <div class="col-sm-8">
-                <h1 class="display-5 fw-bold">My name is Zola Mendbayar, I'm currently a sophomore at Glenbrook South High School.</h1>
+            <div class="row">
+                <div class="col-12">
+                    <p class="lead mt-3">
+                        Fluent in both English and Mongolian, I embrace the richness of my multicultural background and I am deeply fascinated by different cultures. My love for exploring new things is endless and my curiosity leads me to look at the world in different perspectives and gain new experience. I'm proud to say that I lead as the captain of our field hockey team and am on the JV badminton. Family and friends are my core values, the love and connection I have with them shape who I am today. I'm truly passionate about maintaining a healthy lifestyle and love working out and running to stay fit while balancing my life between school and at home. In my opinion, putting in the effort always pays off, and I see no reason to stop working hard. It's the key to unlocking the best outcomes, and I will never stop encouraging others to never give up.
+                    </p>
+                </div>
             </div>
-        </div>
-        <div class="row">
-            <div class="col-12">
-                <p class="lead mt-3">
-                    Fluent in both English and Mongolian, I embrace the richness of my multicultural background and I am deeply fascinated by different cultures. My love for exploring new things is endless and my curiosity leads me to look at the world in different perspectives and gain new experience. I'm proud to say that I lead as the captain of our field hockey team and am on the JV badminton. Family and friends are my core values, the love and connection I have with them shape who I am today. I'm truly passionate about maintaining a healthy lifestyle and love working out and running to stay fit while balancing my life between school and at home. In my opinion, putting in the effort always pays off, and I see no reason to stop working hard. It's the key to unlocking the best outcomes, and I will never stop encouraging others to never give up.
-                </p>
-            </div>
-        </div>
-    </main>
-</div>
+        </main>
+    </div>
      <!-- HERO SECTION END -->
-     <!-- RESUME START -->
-     <p class="d-inline-flex gap-1">
-        <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-            RESUME
-        </button>        
-      </p>
-      <div class="collapse" id="collapseExample">
-        <div class=" resume-section">
-            <img src="img/resume.jpg" width="500" height="600">
+
+    <!-- ONE COLUMN START -->
+    <div class="white-bg">
+        <div class="container py-5" id="about">
+            <div class="row">
+                <div class="col text-center">
+                    <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+                        RESUME
+                    </button>     
+                </div>   
+            </div>
         </div>
-      </div>
+    </div>
+      <!-- ONE COLUMN END -->
+      <div class="white-bg">
+
+            <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-indicators">
+                  <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                  <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                  <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                </div>
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img src="img/blank.png" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                      <h5>First slide label</h5>
+                      <p>Some representative placeholder content for the first slide.</p>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <img src="..." class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                      <h5>Second slide label</h5>
+                      <p>Some representative placeholder content for the second slide.</p>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <img src="img/blank.png" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                      <h5>Third slide label</h5>
+                      <p>Some representative placeholder content for the third slide.</p>
+                    </div>
+                  </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+              </div>
+    </div>
 </body>
 </html>
-
-
-
