--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="#">About</a>
+                        <a class="nav-link" aria-current="page" href="#about">About</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Resume</a>
@@ -36,7 +36,8 @@
             </div>
         </div>
     </nav>
-     <!-- HERO SECTION START -->
+
+    <!-- HERO SECTION START -->
     <div class="hero-section py-5">
         <main class="container py-5">
             <div class="row">
@@ -56,61 +57,96 @@
             </div>
         </main>
     </div>
-     <!-- HERO SECTION END -->
+    <!-- HERO SECTION END -->
 
-    <!-- ONE COLUMN START -->
-    <div class="white-bg">
-        <div class="container py-5" id="about">
+    <div class="container">
+        <div class="row">
+            <div class="col carousel-container">
+                <!-- CAROUSEL SECTION START -->
+                <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-indicators">
+                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                    </div>
+
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="img/beach.jpeg" class="d-block w-100" alt="beach">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h2>GILSON PARK</h2>
+                                <p> .</p>
+                                <p> .</p>
+                                <p> .</p>
+                                <p> .</p>
+                                <p> .</p>
+                                <p> .</p>
+                                <p> .</p>
+                                <p> .</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="img/mountain.jpeg" class="d-block w-100" alt="mountain">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h2>YELLOW STONE</h2>
+                                <p> .</p>
+                                <p> .</p>
+                                <p> .</p>
+                                <p> .</p>
+                                <p> .</p>
+                                <p> .</p>
+                                <p> .</p>
+                                <p> .</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="img/city.jpeg" class="d-block w-100" alt="city">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h2>CHICAGO</h2>
+                                <p> .</p>
+                                <p> .</p>
+                                <p> .</p>
+                                <p> .</p>
+                                <p> .</p>
+                                <p> .</p>
+                                <p> .</p>
+                                <p> .</p>
+                            </div>
+                        </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
+                <!-- CAROUSEL SECTION END -->
+            </div>
+        </div>
+    </div>
+
+    <!-- ABOUT SECTION START -->
+    <div class="white-bg" id="about">
+        <div class="container py-5">
             <div class="row">
                 <div class="col text-center">
                     <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
                         RESUME
-                    </button>     
+                    </button>
+                    <div class="collapse" id="collapseExample">
+                        <div class="card card-body mt-3">
+                            <img src="img/resume.jpg" alt="Zola Mendbayar's Resume" width="500" height="800">
+                        </div>
+                    </div>     
                 </div>   
             </div>
         </div>
     </div>
-      <!-- ONE COLUMN END -->
-      <div class="white-bg">
+    <!-- ABOUT SECTION END -->
 
-            <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
-                <div class="carousel-indicators">
-                  <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                  <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                  <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-                </div>
-                <div class="carousel-inner">
-                  <div class="carousel-item active">
-                    <img src="img/blank.png" class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
-                      <h5>First slide label</h5>
-                      <p>Some representative placeholder content for the first slide.</p>
-                    </div>
-                  </div>
-                  <div class="carousel-item">
-                    <img src="..." class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
-                      <h5>Second slide label</h5>
-                      <p>Some representative placeholder content for the second slide.</p>
-                    </div>
-                  </div>
-                  <div class="carousel-item">
-                    <img src="img/blank.png" class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
-                      <h5>Third slide label</h5>
-                      <p>Some representative placeholder content for the third slide.</p>
-                    </div>
-                  </div>
-                </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Next</span>
-                </button>
-              </div>
-    </div>
 </body>
 </html>
+
