--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
                         <a class="nav-link" aria-current="page" href="#about">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Resume</a>
+                        <a class="nav-link" href="#Song">Song</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contact</a>
+                        <a class="nav-link" href="#resume">Resume</a>
                     </li>
                 </ul>
             </div>
@@ -51,85 +51,88 @@
             <div class="row">
                 <div class="col-12">
                     <p class="lead mt-3">
-                        Fluent in both English and Mongolian, I embrace the richness of my multicultural background and I am deeply fascinated by different cultures. My love for exploring new things is endless and my curiosity leads me to look at the world in different perspectives and gain new experience. I'm proud to say that I lead as the captain of our field hockey team and am on the JV badminton. Family and friends are my core values, the love and connection I have with them shape who I am today. I'm truly passionate about maintaining a healthy lifestyle and love working out and running to stay fit while balancing my life between school and at home. In my opinion, putting in the effort always pays off, and I see no reason to stop working hard. It's the key to unlocking the best outcomes, and I will never stop encouraging others to never give up.
+                        Fluent in both English and Mongolian. My love for exploring new things is endless and my curiosity leads me to look at the world in different perspectives and gain new experience. I'm proud to say that I lead as the captain of our field hockey team and am on the JV badminton. Family and friends are my core values, the love and connection I have with them shape who I am today. I'm truly passionate about maintaining a healthy lifestyle and love working out and running to stay fit while balancing my life between school and at home. In my opinion, putting in the effort always pays off, and I see no reason to stop working hard. It's the key to unlocking the best outcomes, and I will never stop encouraging others to never give up.
                     </p>
                 </div>
             </div>
         </main>
     </div>
     <!-- HERO SECTION END -->
+    <div class="light-bg pt-4">
+        <div class="container">
+            <div class="row">
+                <div class="col carousel-container">
+                    <!-- CAROUSEL SECTION START -->
+                    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+                        <div class="carousel-indicators">
+                            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                        </div>
 
-    <div class="container">
-        <div class="row">
-            <div class="col carousel-container">
-                <!-- CAROUSEL SECTION START -->
-                <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
-                    <div class="carousel-indicators">
-                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img src="img/beach.jpeg" class="d-block w-100" alt="beach">
+                                <div class="carousel-caption d-none d-md-block">
+                                    <h2>"God gave you what you can handle" - Frank Ocean</h2>
+                                    <p> .</p>
+                                    <p> .</p>
+                                    <p> .</p>
+                                    <p> .</p>
+                                    <p> .</p>
+                                    <p> .</p>
+                                    <p> .</p>
+                                    <p> .</p>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <img src="img/mountain.jpeg" class="d-block w-100" alt="mountain">
+                                <div class="carousel-caption d-none d-md-block">
+                                    <h2>"You can't think You just gotta do things" - Frank Ocean</h2>
+                                    <p> .</p>
+                                    <p> .</p>
+                                    <p> .</p>
+                                    <p> .</p>
+                                    <p> .</p>
+                                    <p> .</p>
+                                    <p> .</p>
+                                    <p> .</p>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <img src="img/city.jpeg" class="d-block w-100" alt="city">
+                                <div class="carousel-caption d-none d-md-block">
+                                    <h2>"There's just some magic in truth and honesty and openess." - Frank Ocean</h2>
+                                    <p> .</p>
+                                    <p> .</p>
+                                    <p> .</p>
+                                    <p> .</p>
+                                    <p> .</p>
+                                    <p> .</p>
+                                    <p> .</p>
+                                    <p> .</p>
+                                </div>
+                            </div>
+                        </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Next</span>
+                        </button>
                     </div>
-
-                    <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <img src="img/beach.jpeg" class="d-block w-100" alt="beach">
-                            <div class="carousel-caption d-none d-md-block">
-                                <h2>GILSON PARK</h2>
-                                <p> .</p>
-                                <p> .</p>
-                                <p> .</p>
-                                <p> .</p>
-                                <p> .</p>
-                                <p> .</p>
-                                <p> .</p>
-                                <p> .</p>
-                            </div>
-                        </div>
-                        <div class="carousel-item">
-                            <img src="img/mountain.jpeg" class="d-block w-100" alt="mountain">
-                            <div class="carousel-caption d-none d-md-block">
-                                <h2>YELLOW STONE</h2>
-                                <p> .</p>
-                                <p> .</p>
-                                <p> .</p>
-                                <p> .</p>
-                                <p> .</p>
-                                <p> .</p>
-                                <p> .</p>
-                                <p> .</p>
-                            </div>
-                        </div>
-                        <div class="carousel-item">
-                            <img src="img/city.jpeg" class="d-block w-100" alt="city">
-                            <div class="carousel-caption d-none d-md-block">
-                                <h2>CHICAGO</h2>
-                                <p> .</p>
-                                <p> .</p>
-                                <p> .</p>
-                                <p> .</p>
-                                <p> .</p>
-                                <p> .</p>
-                                <p> .</p>
-                                <p> .</p>
-                            </div>
-                        </div>
-                    </div>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Previous</span>
-                    </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Next</span>
-                    </button>
+                    <!-- CAROUSEL SECTION END -->
                 </div>
-                <!-- CAROUSEL SECTION END -->
             </div>
         </div>
     </div>
 
+    <div class="container-spotify" id="spotify">
+        <span id="Song"> Current Song On Repeat-></span><iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/6R6ihJhRbgu7JxJKIbW57w?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe></div>
     <!-- ABOUT SECTION START -->
-    <div class="white-bg" id="about">
+    <div class="white-bg" id="resume">
         <div class="container py-5">
             <div class="row">
                 <div class="col text-center">
@@ -146,7 +149,8 @@
         </div>
     </div>
     <!-- ABOUT SECTION END -->
-
+   
+      
 </body>
 </html>
 
